# JSONEditor-tui

./: CMakeLists.txt  LICENSE  README.md
include/: common.h  hello.h  tui.h
src/: hello.c  main.c  tui.c
testing/: configTest.json
